Improvments to findMethodDeclaration and tests to go witht hat